[project]
name = "alphavantage"
version = "0.3.10"
description = "Alphavantage MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump2version>=1.0.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "load-dotenv>=0.1.0",
    "mcp>=1.0.0",
    "python-mcp>=1.0.1",
    "streamlit>=1.45.1",
    "toml>=0.10.2",
]
[[project.authors]]
name = "Cesar Alvernaz"
email = "cesar.alvernaz@gmail.com"


[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphavantage_mcp_server"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.9",
]

[project.scripts]
alphavantage = "alphavantage_mcp_server:main"
